<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activitys.MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorAccent" />

    <EditText
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:bufferType="normal"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:text="Waiting..."
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="325dp"
        android:layout_height="526dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/custom_button2"
                    android:layout_width="162dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/ketto" />

                <Button
                    android:id="@+id/custom_button1"
                    android:layout_width="167dp"
                    android:layout_height="81dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/egy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/custom_button3"
                    android:layout_width="163dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/harom" />

                <Button
                    android:id="@+id/custom_button4"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/negy" />
            </LinearLayout>

            <Button
                android:id="@+id/custom_button5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/ot" />

            <TextView
                android:id="@+id/sendText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="#03A9F4"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/leaveButton"
                    android:layout_width="163dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/leaveButton" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/sendButton" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>